# rosmower_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Battery.msg  Bumper.msg  MowMotor.msg  Perimeter.msg  PerimeterMsg.msg  Switches.msg
srv/: PressSwitch.srv  SetMowMotor.srv  SetSwitch.srv  doCalibration.srv  setMowMotor.srv
