cmake_minimum_required(VERSION 3.5)
project(rosmower_msgs)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclpy REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Perimeter.msg"
   "msg/Bumper.msg"
   "msg/Battery.msg"
   "msg/MowMotor.msg"
   "msg/Switches.msg"
   "srv/SetMowMotor.srv"
   "srv/Calibration.srv"
   "srv/SetSwitch.srv"
   "srv/PressSwitch.srv"
   DEPENDENCIES
   std_msgs 
 )


include_directories(include)
ament_export_include_directories(include)
ament_export_dependencies(std_msgs)
ament_package()
